--- a/quake2.vcxproj.filters
+++ b/quake2.vcxproj.filters
@@ -402,6 +402,9 @@
     <ClCompile Include="qcommon\murmur3\murmur3.c">
       <Filter>Source Files\common</Filter>
     </ClCompile>
+    <ClCompile Include="qcommon\stable.c">
+      <Filter>Source Files\common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client\anorms.h">
