Initial commit with string set + improvements to 'dir' command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ set(COMMON_SOURCES
   qcommon/shared/m_flash.c
   qcommon/shared/q_shared.c
   qcommon/stable.c
+  qcommon/sset.c
   qcommon/wildcard.c
   qcommon/murmur3/murmur3.c
   qcommon/zip/ioapi.c
