Add output of architecture + update game libraries to latest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -340,6 +340,17 @@ add_executable(quake2vr ${CLIENT_BASE} ${BACKEND})
 
 target_link_libraries(quake2vr ${SDL2_LIBRARY} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} ${GLEW_LIBRARIES} ${ZLIB_LIBRARIES})
 
+
+# check 64 bit
+# this will break on non-x86 processors
+if( CMAKE_SIZEOF_VOID_P EQUAL 4 )
+	set( ARCH "x86" )
+else()
+	set(  ARCH "x64" )
+endif()
+
+message ( STATUS "Building for ${ARCH}" )
+
 if (OVR_FOUND)
   message ( STATUS "Building with Oculus Rift support..." )
   include_directories (${OVR_INCLUDE_DIR} ${OVR_CAPI_INCLUDE_DIR})  
