Fork OVR backend in prep for 0.6+ refactor
-Old backend will live on as the OVR backend. New backend will be called Rift.
-Build with define OCULUS_LEGACY to build against old backend

--- a/quake2.vcxproj
+++ b/quake2.vcxproj
@@ -239,7 +239,7 @@
     <ClCompile Include="client\renderer\r_vbo.c" />
     <ClCompile Include="client\renderer\r_vlights.c" />
     <ClCompile Include="client\renderer\r_vr.c" />
-    <ClCompile Include="client\renderer\r_vr_ovr.c" />
+    <ClCompile Include="client\renderer\r_vr_rift.c" />
     <ClCompile Include="client\renderer\r_vr_svr.c" />
     <ClCompile Include="client\renderer\r_warp.c" />
     <ClCompile Include="client\sound\ogg.c" />
@@ -269,14 +269,13 @@
     <ClCompile Include="client\ui\ui_options_sound.c" />
     <ClCompile Include="client\ui\ui_options_vr.c" />
     <ClCompile Include="client\ui\ui_options_vr_advanced.c" />
-    <ClCompile Include="client\ui\ui_options_vr_ovr.c" />
     <ClCompile Include="client\ui\ui_options_vr_svr.c" />
     <ClCompile Include="client\ui\ui_quit.c" />
     <ClCompile Include="client\ui\ui_subsystem.c" />
     <ClCompile Include="client\ui\ui_video.c" />
     <ClCompile Include="client\ui\ui_video_advanced.c" />
     <ClCompile Include="client\vr\vr_main.c" />
-    <ClCompile Include="client\vr\vr_ovr.c" />
+    <ClCompile Include="client\vr\vr_rift.c" />
     <ClCompile Include="client\vr\vr_steamvr.cpp" />
     <ClCompile Include="client\vr\vr_svr.c" />
     <ClCompile Include="qcommon\glob.c" />
@@ -345,12 +344,12 @@
     <ClInclude Include="client\renderer\include\r_normals.h" />
     <ClInclude Include="client\renderer\include\r_stereo.h" />
     <ClInclude Include="client\renderer\include\r_vr.h" />
-    <ClInclude Include="client\renderer\include\r_vr_ovr.h" />
+    <ClInclude Include="client\renderer\include\r_vr_rift.h" />
     <ClInclude Include="client\renderer\include\r_vr_svr.h" />
     <ClInclude Include="client\sound\include\qal.h" />
     <ClInclude Include="client\ui\include\ui_local.h" />
     <ClInclude Include="client\vr\include\vr.h" />
-    <ClInclude Include="client\vr\include\vr_ovr.h" />
+    <ClInclude Include="client\vr\include\vr_rift.h" />
     <ClInclude Include="client\vr\include\vr_steamvr.h" />
     <ClInclude Include="client\vr\include\vr_svr.h" />
     <ClInclude Include="qcommon\shared\q_shared.h" />
