--- a/quake2.vcxproj.filters
+++ b/quake2.vcxproj.filters
@@ -183,9 +183,6 @@
     <ClCompile Include="client\vr\vr_main.c">
       <Filter>Source Files\client\vr</Filter>
     </ClCompile>
-    <ClCompile Include="client\vr\vr_ovr.c">
-      <Filter>Source Files\client\vr</Filter>
-    </ClCompile>
     <ClCompile Include="client\vr\vr_steamvr.cpp">
       <Filter>Source Files\client\vr</Filter>
     </ClCompile>
@@ -253,9 +250,6 @@
       <Filter>Source Files\client\ui</Filter>
     </ClCompile>
     <ClCompile Include="client\ui\ui_options_vr_advanced.c">
-      <Filter>Source Files\client\ui</Filter>
-    </ClCompile>
-    <ClCompile Include="client\ui\ui_options_vr_ovr.c">
       <Filter>Source Files\client\ui</Filter>
     </ClCompile>
     <ClCompile Include="client\ui\ui_options_vr_svr.c">
@@ -345,9 +339,6 @@
     <ClCompile Include="client\renderer\r_vr.c">
       <Filter>Source Files\client\renderer</Filter>
     </ClCompile>
-    <ClCompile Include="client\renderer\r_vr_ovr.c">
-      <Filter>Source Files\client\renderer</Filter>
-    </ClCompile>
     <ClCompile Include="client\renderer\r_vr_svr.c">
       <Filter>Source Files\client\renderer</Filter>
     </ClCompile>
@@ -407,6 +398,12 @@
     </ClCompile>
     <ClCompile Include="client\ui\ui_game_mod.c">
       <Filter>Source Files\client\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="client\renderer\r_vr_rift.c">
+      <Filter>Source Files\client\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="client\vr\vr_rift.c">
+      <Filter>Source Files\client\vr</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -506,9 +503,6 @@
     <ClInclude Include="client\renderer\include\r_vr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="client\renderer\include\r_vr_ovr.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="client\renderer\include\r_vr_svr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -530,9 +524,6 @@
     <ClInclude Include="client\vr\include\vr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="client\vr\include\vr_ovr.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="qcommon\shared\q_shared.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -540,6 +531,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="client\renderer\include\r_stereo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="client\vr\include\vr_rift.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="client\renderer\include\r_vr_rift.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
